# UnitConvertGui

./: CMakeLists.txt  README.md  conanfile.txt
src/: Application.qrc  Backend.cpp  Backend.hpp  MainWindow.qml  MainWindow.qrc  MainWindowContent.qml  PreviewWindow.qml  QQmlApplicationPreviewEngine.cpp  QQmlApplicationPreviewEngine.hpp  main.cpp  preview.cpp
